[tool.poetry]
name = "osmosis-website"
version = "1.3.2"
description = "Home of the Osmosis podcast"
authors = ["Jamie McMillan <jamie.mcmillan@satellitevu.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.134"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
ipython = "^8.25.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
bandit = "^1.7.9"
mypy = "^1.10.1"
boto3-stubs = {version="^1.34.134", extras = ["s3"]}
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
